# tuiscad

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/tuiscad/: __init__.py  __main__.py  app.py  cli.py  discovery.py  models.py  parser.py  preset.py  screens.py  treebrowse.py  widgets.py
tests/: test_app.py  test_discovery.py  test_parser.py  test_preset.py
tests/__snapshots__/test_app/: test_snapshot_initial_screen.raw
tests/fixtures/: sample.scad
