[project]
name = "tuiscad"
version = "0.1.0"
description = "A TUI customizer for OpenSCAD: edit parameters as text, save diffs as runnable .scad presets"
readme = "README.md"
authors = [
    { name = "Antoine Beyeler", email = "abeyeler@ab-ware.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.86",
    "click>=8.1",
]

[project.scripts]
tuiscad = "tuiscad.cli:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-textual-snapshot>=1.0",
    "textual-dev>=1.7",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
